@startuml
'https://plantuml.com/class-diagram

class BuilderDuy{
- String tenTour
- double giaTien
- String thoiGian
- ArrayList<DiaDiemDuy>
+ Builder setTen(String ten)
+ Builder setGia(double gia)
+ Builder setThoiGian(String thoiGian)
+ Builder addDiaDiem(String tenDiaDiem, String diaChi, String thoiDiemThamQuan)
+ Tour build()
}
class DiaDiemDuy{
- String tenDiaDiem
- String diaChi
- String thoiDiemThamQuan
}
class TourDuy{
- String tenTour
- double giaTien
- String thoiGian
- ArrayList<DiaDiemDuy>
- TourDuy(BuilderDuy b)

}
BuilderDuy ..> TourDuy
TourDuy *-->DiaDiemDuy
BuilderDuy --> DiaDiemDuy
@enduml